--- a/assets/styles/_typography.scss
+++ b/assets/styles/_typography.scss
@@ -8,55 +8,61 @@ h5,
 .heading-3,
 .heading-4,
 .heading-5 {
-  margin: 0 0 2.5rem;
-  font-family: $font--pri;
-  font-weight: 400;
-  line-height: 120%;
+    margin: 0 0 2.5rem;
+    font-family: $font--pri;
+    font-weight: 400;
+    line-height: 120%;
 }
 
 h1,
 .heading-1 {
-  font-size: 3.5rem;
+    font-size: 3.5rem;
 
-  @include respond-to-min($md) {
-    font-size: 5rem;
-  }
+    @include respond-to-min($md) {
+        font-size: 5rem;
+    }
 }
 
 h2,
 .heading-2 {
-  font-size: 3rem;
+    font-size: 3rem;
 
-  @include respond-to-min($md) {
-    font-size: 3.6rem;
-  }
+    @include respond-to-min($md) {
+        font-size: 3.6rem;
+    }
 }
 
 h3,
 .heading-3 {
-  font-size: 2.5rem;
+    font-size: 2.5rem;
 
-  @include respond-to-min($md) {
-    font-size: 3rem;
-  }
+    @include respond-to-min($md) {
+        font-size: 3rem;
+    }
 }
 
 h4,
 .heading-4 {
-  font-size: 2rem;
+    font-size: 2rem;
 
-  @include respond-to-min($md) {
-    font-size: 2.5rem;
-  }
+    @include respond-to-min($md) {
+        font-size: 2.5rem;
+    }
+}
+
+input {
+    font-family: $font--sec;
+    font-size: 1.6rem;
+    line-height: 130%;
 }
 
 p,
 li {
-  font-size: 1.6rem;
-  line-height: 130%;
+    font-size: 1.6rem;
+    line-height: 130%;
 }
 
 a {
-  color: inherit;
-  text-decoration: none;
+    color: inherit;
+    text-decoration: none;
 }
