--- a/assets/styles/style.scss
+++ b/assets/styles/style.scss
@@ -1,7 +1,8 @@
-@import "fonts";
-@import "variables";
-@import "reset";
-@import "transitions";
-@import "typography";
-@import "buttons";
-@import "containers";
+@import 'fonts';
+@import 'variables';
+@import 'reset';
+@import 'transitions';
+@import 'typography';
+@import 'buttons';
+@import 'forms';
+@import 'containers';
